[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = "goit-pythonweb-hw-04"
authors = ["Andrii Korchevnyi"]

[tool.poetry.dependencies]
python = "^3.13"
aioshutil = "^1.5"
aiopath = "^0.7.7"
    

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
